--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_ZAP="5588992301470"
+TOKEN_MERCADO_PAGO="TEST-5570204671266585-071822-8907a16ce85bdb8b35e23b466c4aaeb8-220656682"
+API_URL_MERCADO_PAGO="https://api.mercadopago.com/v1"
