--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.7.0",
+    "@mercadopago/sdk-js": "^0.0.3",
+    "@mercadopago/sdk-react": "^0.0.19",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
@@ -22,7 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.368.0",
-    "next": "14.1.4",
+    "next": "^14.2.18",
     "next-theme": "^0.1.5",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -34,6 +36,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/mercadopago": "^1.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
